--- a/css/style.css
+++ b/css/style.css
@@ -9,22 +9,185 @@ html {
 }
 
 body {
+	margin: 0;
+	font-family: "Roboto", "Arial", sans-serif;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: normal;
+	color: #000;
+}
+
+.visually_hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+.container {
+	width: 1200px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+.main_header {
+	margin-bottom: 40px;
+	background-color: #eeeeee;
+}
+
+.main_navigation {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	padding-top: 50px;
+}
+
+.main_navigation a {
+	display: inline-block;
+}
+
+.navigation_item:hover,
+.basket:hover,
+.navigation_item:focus,
+.basket:focus {
+	color: #fb565a;
+}
+
+.navigation_item:active,
+.basket:active {
+	color: #000;
+	opacity: .3;
+	border-bottom: 2px solid #fb565a;
+}
+
+.navigation_item {
+	border-bottom: 2px solid transparent;	
+}
+
+.navigation_item_current {
+	border-bottom: 2px solid #fb565a;
+}
+
+.site_navigation,
+.user_navigation {
+	margin: 0;
+	padding: 0;
+	font-size: 16px;
+	line-height: 30px;
+	font-weight: 500;
+	list-style: none;
+	text-transform: uppercase;
+}
+
+.site_navigation {
+	display: flex;
+	margin-top: 20px;
+}
+
+.navigation_item {
+	margin-right: 48px;
+}
+
+.user_navigation {
+	margin-top: 20px;
+}
+
+.basket a {
+	padding-left: 40px;
+	position: relative;
+}
+
+.basket a::before {
+	content: "";
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	left: 0;
+	top: 2px;
+	background: url("../img/basket.svg") no-repeat center;
+}
+
+.slider {
+	position: relative;
+	height: 430px;
+}
+
+.slide {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	overflow:hidden;
+	display: none;
+}
+
+.btn {
+	font-family: inherit;
+	font-weight: 500;
+	display: inline-block;
+	padding: 16px 54px;
+	font-size: 16px;
+	line-height: 18px;
+	color: #fff;
+	border-radius: 4px;
+	background-color: #fb565a;
+}
+
+.btn:hover,
+.btn:focus {
+	background-color: #e74246;
+	outline: 0;
+}
+
+.btn:active {
+	color: rgba(255, 255, 255, 0.3);
+	background-color: #d7373b;
+	box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.slide {
+	background-repeat: no-repeat;
+	background-position: 100% 15px;
+}
+
+.slide h2 {
+	margin: 80px 0 30px 0;
+	font-size: 55px;
+	line-height: 55px;
+}
+
+.slide p {
+	margin: 0 0 35px 0;
+	color: #283136;
 	font-size: 16px;
 	line-height: 24px;
 }
 
-header {
-	min-height: 545px;
-	background-color: #eeeeee;
-
+.slide_one {
+	background-image: url("../img/slide_one.png");
 }
 
-.sliders {
-	position: relative;
+.slide_two {
+	background-image: url("../img/slide_two.png");
 }
 
-.slide {
-	display: none;
+.slide_three {
+	background-image: url("../img/slide_three.png");
 }
 
 #btn_one:checked ~ .slide_one,
@@ -50,17 +213,21 @@ header {
 	margin: auto;
 }
 
-.sliders input {
+.slider input {
 	display: none;
 }
 
 .slide_controls {
 	position: absolute;
 	left: 50%;
-	top: 50%;
+	bottom: 96px;
+	width: 200px;
+	height: 10px;
+	margin-left: -100px;
+	text-align: center;
 }
 
-.sliders label {
+.slider label {
 	display: inline-block;
 	position: relative;
 	width: 18px;
@@ -68,5 +235,931 @@ header {
 	margin-right: 8px;
 	background-color: #fff;
 	border-radius: 50%;
+	cursor: pointer;
 }
 
+/*Каталог*/
+
+.catalog_title {
+	margin: 0;
+	padding: 77px 0 110px 0;
+	text-align: center;
+	font-size: 55px;
+	line-height: 55px;
+	font-weight: 500;
+	color: #000;
+}
+
+.catalog_site .container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.filters {
+	width: 260px;
+}
+
+.catalog {
+	width: 760px;
+}
+
+.filter_range {
+	width: 260px;
+	margin-bottom: 60px;
+}
+
+.filter_range_title {
+	display: inline-block;
+	margin-bottom: 70px;
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.range_controls {
+	height: 80px;
+	margin-bottom: 15px;
+	padding: 0 20px;
+	background-color: #f1f1f1;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+.range_controls .scale {
+	position: relative;
+	margin-top: 39px;
+	height: 2px;
+	background-color: #d7dcde;
+}
+
+.range_controls .bar {
+	width: 70%;
+	height: 2px;
+	background: #00ca74;
+}
+
+.range_controls .range_roller {
+	position: absolute;
+	top: -10px;
+	width: 20px;
+	margin-left: -10px;
+	height: 20px;
+	border: 8px solid #fff;
+	border-radius: 50%;
+	background: #ababab;
+	box-shadow: 0 2px 1px 0 #cfcfcf;
+	cursor: pointer;
+}
+
+.range_roller_min {
+	left: 0%;
+}
+
+.range_roller_max {
+	left: 70%;
+}
+
+.price_controls label {
+	display: inline-block;
+	width: 50%;
+	font-size: 16px;
+}
+
+.price_controls {
+	font-size: 0;
+}
+
+.offer {
+	padding-bottom: 80px;
+	margin-bottom: 74px;
+	border-bottom: 2px solid #eeeeee;
+}
+
+.price_controls input {
+	width: 80px;
+	margin-left: 10px;
+	padding: 8px 10px;
+	font-size: 16px;
+	line-height: 22px;
+	text-align: center;
+	color: #283136;
+	border: none;
+	border-radius: 5px;
+	background: #f1f1f1;
+}
+
+.max_price {
+	text-align: right;
+}
+
+.filters fieldset {
+	margin: 0 0 40px 0;
+	padding: 0;
+	border: none;
+}
+
+.filters legend {
+	margin: 0 0 14px 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.filters .grid_list,
+.filters .feature_list {
+	margin: 0;
+	padding: 0 0 0 35px;
+	list-style: none;
+}
+
+.grid_list li,
+.feature_list li {
+	margin-bottom: 15px;
+}
+
+.grid_list label,
+.feature_list label {
+	position: relative;
+	cursor: pointer;
+	font-size: 16px;
+	line-height: 20px;
+	color: #283136;
+}
+
+.filter label:hover,
+.filter label:focus {
+	color: #000;
+}
+
+.grid_list label::before {
+	content: "";
+	position: absolute;
+	left: -37px;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	border: 4px solid #a6a6a6;
+	background-color: #fff;
+}
+
+.grid_list label::after {
+	content: "";
+	display: none;
+	position: absolute;
+	left: -29px;
+	top: 6px;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background-color: #a6a6a6;
+}
+
+.feature_list label::before {
+	content: "";
+	position: absolute;
+	width: 23px;
+	height: 23px;
+	background-color: #fff;
+	border: 2px solid #a6a6a6;
+	border-radius: 2px;
+	left: -37px;
+	top: 0;
+}
+
+.feature_list label::after {
+	content: "";
+	display: none;
+	position: absolute;
+	top: 2px;
+	left: -32px;
+	width: 20px;
+	height: 10px;
+	transform: rotate(-45deg);
+	border-left: 4px solid #a6a6a6;
+	border-bottom: 4px solid #a6a6a6;
+	filter: drop-shadow(0px 2px 0 #fff)
+					drop-shadow(0px -2px 0 #fff);
+	background-color: transparent;
+}
+
+.grid_list input:checked + label::after,
+.feature_list input:checked + label::after {
+	display: block;
+}
+
+.feature_list label:hover::after,
+.feature_list label:hover::before,
+.grid_list label:hover::before {
+	border-color: #4d4d4d;
+}
+
+.grid_list label:hover::after {
+	background-color: #4d4d4d;
+}
+
+.filters input:disabled + label {
+	opacity: .3;
+	cursor: default;
+}
+
+.filters input:disabled + label:hover {
+	color: #283136;
+}
+
+.filters input:disabled + label:hover::before,
+.filters input:disabled + label:hover::after {
+	border-color: #a6a6a6;
+}
+
+.grid_list input:disabled + label:hover::after {
+	background-color: #a6a6a6;
+}
+
+.filter_btn {
+	padding: 16px 85px;
+	text-transform: uppercase;
+	border: none;
+	color: #000;
+	background-color: #eeeeee;
+}
+
+.filter_btn:hover,
+.filter_btn:focus {
+	background-color: #dfdfdf;
+}
+
+.filter_btn:active {
+	color: rgba(0, 0, 0, 0.3);
+	background-color: #d5d5d5;
+	box-shadow: inset 0 3px 0 0 rgba(0, 1, 1, 0.1)
+}
+
+.sorting {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 96px;
+}
+
+.sorting_title {
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.sorting_list {
+	width: 360px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+
+	display: flex;
+}
+
+.sorting_list .sorting_item {
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 18px;
+	font-weight: normal;
+	opacity: 0.3;
+}
+
+.sorting_list .sorting_item:hover,
+.sorting_list .sorting_item:focus {
+	opacity: .6;
+}
+
+.sorting_list .sorting_item_current,
+.sorting_list .sorting_item:active {
+	opacity: 1;
+}
+
+.sorting_item {
+	margin-right: 16px;
+}
+
+.arrow_down {
+	margin-left: auto;
+}
+
+.sorting_list .arrow_down a {	
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	background: url("../img/sorting-icon.svg") no-repeat center;
+	transform: rotate(180deg);
+}
+
+.sorting_list .arrow_up a {
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	background: url("../img/sorting-icon.svg") no-repeat center;
+}
+
+.catalog_list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.catalog_item {
+	position: relative;
+	margin: 0 40px 75px 0;
+}
+.catalog_item::before {
+	content: "";
+	width: 360px;
+	height: 40px;
+	top: -24px;
+	left: 0;
+	position: absolute;
+	background: url(../img/browser.svg) no-repeat center;
+	opacity: 0.1;
+}
+
+.catalog_item:hover::before {
+	opacity: 1;
+}
+
+.catalog_item:hover .catalog_item_hover {
+	display: flex;
+}
+
+.catalog_item:nth-child(2n) {
+	margin-right: 0;
+}
+
+.catalog_list .catalog_item {
+	position: relative;
+}
+
+.catalog_item_hover {
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 360px;
+	height: 230px;
+	padding: 27px 60px 43px 60px;
+	text-align: center;
+	background-color: #eeeeee;
+}
+
+.catalog_btn {
+	width: 200px;
+}
+
+.catalog_item_title {
+	margin: 0;
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.catalog_description {
+	margin: -17px 0 0 0;
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: normal;
+	color: #666666;
+}
+
+.pagination_list {
+	display: flex;
+	margin: 0 0 40px 0;
+	padding: 0;
+	list-style: none;
+}
+
+.pagination_item {
+	margin-right: 10px;
+	width: 50px;
+	height: 50px;
+	font-size: 16px;
+	line-height: 44px;
+	border-radius: 2px;
+	background-color: #eeeeee;
+	border: 3px solid transparent;
+	text-align: center;
+}
+
+.pagination_item_btn {
+	padding: 13px 77px;
+	font-size: 16px;
+	border-radius: 2px;
+	background-color: #eeeeee;
+}
+
+.pagination_item:hover,
+.pagination_item_btn:hover {
+	background-color: #dfdfdf;
+}
+
+.pagination_item:active,
+.pagination_item_btn:active {
+	color: rgba(0, 0, 0, 0.3);
+	background-color: #d5d5d5;
+	border-top: 3px solid rgba(0, 1, 1, 0.1)
+}
+
+.pagination_item_current {
+	border: 3px solid #dbdbdb;
+	background-color: #fff;
+}
+/*====== Каталог END =====*/
+
+.offer_list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+
+.offer_item {
+	flex-basis: 300px;
+	margin-right: 100px;
+}
+
+.offer_item:nth-child(3n) {
+	margin-right: 0;
+}
+
+.offer_img {
+	width: 300px;
+	height: 145px;
+	margin-bottom: 27px;
+}
+
+.offer_item h3 {
+	margin: 0 0 20px 0;
+	font-size: 24px;
+	line-height: 30px;
+	text-transform: uppercase;
+}
+
+.offer_item p {
+	width: 240px;
+	margin: 0 0 10px 0;
+	color: #283136;
+}
+
+.offer_item:first-child .offer_btn {
+	background-color: #fb565a;
+}
+
+.offer_item:nth-child(2) .offer_btn {
+	background-color: #00ca74;
+}
+
+.offer_item:last-child .offer_btn {
+	background-color: #efc849;
+}
+
+.offer_item:first-child .offer_btn:hover,
+.offer_item:first-child .offer_btn:focus {
+	background-color: #e74246;
+}
+
+.offer_item:first-child .offer_btn:active {
+	background-color: #d7373b;
+}
+
+.offer_item:nth-child(2) .offer_btn:hover,
+.offer_item:nth-child(2) .offer_btn:focus {
+	background-color: #00bc6c;
+	outline: 0;
+}
+
+.offer_item:nth-child(2) .offer_btn:active {
+	background-color: #00aa62;
+}
+
+.offer_item:last-child .offer_btn:hover,
+.offer_item:last-child .offer_btn:focus {
+	background-color: #eab534;
+	outline: 0;
+}
+
+.offer_item:last-child .offer_btn:active {
+	background-color: #e5a722;
+}
+
+.offer_item {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.offer_btn {
+	margin-top: auto;
+}
+
+.features {
+	display: flex;
+	justify-content: space-between;
+	padding-bottom: 40px;
+	margin-bottom: 45px;
+	border-bottom: 2px solid #eeeeee;
+}
+
+.about {
+	flex-basis: 660px;
+}
+
+.about h1 {
+	margin: 0 0 30px 0;
+	font-size: 45px;
+	line-height: 45px;
+	font-weight: 500;
+}
+
+.about p {
+	margin: 0 0 40px 0;
+	color: #283136;
+}
+
+.about span {
+	display: inline-block;
+	margin: 0 0 27px 0;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.about_list {
+	color: #283136;
+}
+
+.about_list li {
+	position: relative;
+	margin-bottom: 27px;
+	padding-left: 35px;
+}
+
+.about_list li:before {
+	content: "";
+	position: absolute;
+	top: calc(50% - 1px);
+	left: 0;
+	width: 25px;
+	height: 2px;
+	background-color: #fb565a;
+}
+
+.stat_list,
+.about_list {
+	margin: 0;
+	padding: 0;
+	list-style: none
+}
+
+.stat {
+	flex-basis: 370px;
+}
+
+.stat img {
+	margin: -35px 0 20px 20px;
+}
+
+.stat .stat_title {
+	display: block;
+	margin: 10px 0 40px 0;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.table_stat .table_percent {
+	font-size: 45px;
+	line-height: 45px;
+	font-weight: bold;
+}
+
+.table_stat td {
+	text-align: left;
+	padding: 0 20px 20px 0;
+}
+
+.table_stat td:last-child {
+	padding-right: 0;
+}
+
+.table_info {
+	font-size: 16px;
+	line-height: 18px;
+	color: #283136;
+}
+
+.our_works {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+
+	padding-bottom: 45px;
+	margin-bottom: 80px;
+	border-bottom: 2px solid #eeeeee;
+
+}
+
+.our_works img {
+	opacity: .2;
+}
+
+.our_works img:hover {
+	opacity: 1;
+}
+
+.address {
+	position: absolute;
+	top: calc(50% - 310px/2);
+	left: calc(50% - 600px);
+	width: 320px;
+	min-height: 310px;
+	padding: 50px;
+	background-color: #fff;
+	z-index: 1;
+}
+
+.address .address_title {
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.address .address_location {
+	font-size: 16px;
+	line-height: 18px;
+	color: #666666;
+}
+
+.address .address_phone {
+	font-size: 16px;
+	line-height: 18px;
+	color: #666666;
+}
+
+.main_footer  {
+	margin-bottom: 70px;
+}
+
+.main_footer .container{
+	display: flex;
+}
+
+.social_list {
+	display: flex;
+	margin: 0 140px 0 0;
+	padding: 0;
+	list-style: none;
+}
+
+.social_list li {
+	margin-right: 12px;
+}
+
+.social_list a {
+	position: relative;
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+	background-color: #e1e1e1;
+	border-radius: 50%;
+}
+
+.social_list a:hover {
+	background-color: #e74246;
+}
+
+.social_list a:active {
+	background-color: #d7373b;
+	box-shadow: inset 0 3px 0 0 rgba(0, 1, 1, .1);
+}
+
+.social_list a:active::before {
+	opacity: 0.3;
+}
+
+.social_list a::before {
+	content: "";
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	background-position: center;
+	background-repeat: no-repeat;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.vk a:before {
+	background-image: url("../img/vk-icon.svg");
+}
+
+
+.fb a:before {
+	background-image: url("../img/fb-icon.svg");
+}
+
+.instagram a:before {
+	background-image: url("../img/insta-icon.svg");
+}
+
+.promo_text p:before {
+	margin: 0;
+}
+
+.promo_text {
+	align-self: center;
+}
+
+.promo_text p {
+	margin: 0;
+}
+
+.promo_text p:first-child {
+	margin-bottom: 5px;
+	font-size: 36px;
+	line-height: 36px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.promo_text p:last-child {
+	line-height: 22px;
+	color: #444444;
+}
+
+.modal_feedback {
+	display: none;
+	position: fixed;
+	padding: 70px 100px 85px 100px;
+	width: 960px;
+	min-height: 590px;
+	background-color: #fff;
+	box-shadow: 0 20px 40px 0 rgba(0, 1, 1, .75);
+	right: calc(50% - 960px/2);
+	top: calc(50% - 590px/2);
+	z-index: 2;
+}
+
+.modal_feedback .modal_title {
+	margin: 0 0 40px 0;
+	font-size: 45px;
+	line-height: 45px;
+	font-weight: 500;
+}
+
+.modal_form {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.modal_form_text {
+	flex-basis: 360px;
+	margin-bottom: 35px;
+}
+
+.feedback_btn {
+	border: none;
+	padding-right: 80px;
+	padding-left: 80px;
+}
+
+.modal_feedback label {
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: bold;
+}
+
+.modal_feedback input[type="text"],
+.modal_feedback textarea {
+	margin-top: 10px;
+	padding: 16px;
+	font-size: 16px;
+	line-height: 18px;
+	color: #444444;
+	border: 2px solid #d7dcde;
+	border-radius: 4px;
+}
+
+input[type="text"]:focus,
+.modal_feedback textarea:focus {
+	border-color: #000;
+	outline: 0;
+}
+
+.invalid_form {
+	border-color: #e74246 !important;
+	color: #e74246 !important;
+}
+
+/*Плейсхолдер*/
+
+::-webkit-input-placeholder {
+	color:#d7dcde;
+}
+
+::-moz-placeholder {
+	color:#d7dcde;
+}
+
+:-moz-placeholder  {
+	color:#d7dcde;
+}
+
+:-ms-input-placeholder {
+	color:#d7dcde;
+}
+
+.modal_feedback input[type="text"] {
+	width: 360px;
+}
+
+.modal_feedback textarea {
+	width: 760px;
+	height: 118px;
+	margin-bottom: 45px;
+	resize: none;
+}
+
+.modal_feedback .button_close {
+	position: absolute;
+	top: 80px;
+	right: 90px;
+	width: 21px;
+	height: 21px;
+	border: none;
+	background: url(../img/close-cross.svg) no-repeat center;
+	opacity: .3;
+	cursor: pointer;
+}
+
+.modal_feedback .button_close:hover {
+	opacity: 1;
+}
+
+.modal_feedback .button_close:active {
+	opacity: .1;
+}
+
+.map {
+	width: 100%;
+	height: 430px;
+}
+
+.map_container {
+	position: relative;
+	width: 100%;
+	height: 430px;
+	margin-bottom: 70px;
+}
+
+.modal_show {
+	display: block;
+}
+
+@keyframes shake {
+	0%,
+	100% {
+		-webkit-transform: translateX(0);
+		transform: translateX(0);
+	}
+
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: translateX(-10px);
+		transform: translateX(-10px);
+	}
+
+	20%,
+	40%,
+	60%,
+	80% {
+		-webkit-transform: translateX(10px);
+		transform: translateX(10px);
+	}
+}
+
+.modal_error {
+	-webkit-animation: shake 0.6s;
+	animation: shake 0.6s;
+}
