--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 
 .main_header {
-	margin-bottom: 40px;
+	margin-bottom: 55px;
 	background-color: #eeeeee;
 }
 
@@ -58,6 +58,7 @@ a {
 
 .main_navigation a {
 	display: inline-block;
+	padding-bottom: 3px;
 }
 
 .navigation_item:hover,
@@ -95,7 +96,7 @@ a {
 
 .site_navigation {
 	display: flex;
-	margin-top: 20px;
+	margin-top: 25px;
 }
 
 .navigation_item {
@@ -103,7 +104,7 @@ a {
 }
 
 .user_navigation {
-	margin-top: 20px;
+	margin-top: 25px;
 }
 
 .basket a {
@@ -116,7 +117,7 @@ a {
 	position: absolute;
 	width: 25px;
 	height: 25px;
-	left: 0;
+	left: -6px;
 	top: 2px;
 	background: url("../img/basket.svg") no-repeat center;
 }
@@ -162,20 +163,24 @@ a {
 
 .slide {
 	background-repeat: no-repeat;
-	background-position: 100% 15px;
+	background-position: 93% 17px;
 }
 
 .slide h2 {
-	margin: 80px 0 30px 0;
+	margin: 78px 0px 27px 0px;
 	font-size: 55px;
 	line-height: 55px;
 }
 
 .slide p {
-	margin: 0 0 35px 0;
+	margin: 0 0 39px 0;
 	color: #283136;
 	font-size: 16px;
 	line-height: 24px;
+}
+
+.slider_btn {
+	text-transform: uppercase;
 }
 
 .slide_one {
@@ -220,10 +225,10 @@ a {
 .slide_controls {
 	position: absolute;
 	left: 50%;
-	bottom: 96px;
+	bottom: 104px;
 	width: 200px;
 	height: 10px;
-	margin-left: -100px;
+	margin-left: -96px;
 	text-align: center;
 }
 
@@ -232,7 +237,7 @@ a {
 	position: relative;
 	width: 18px;
 	height: 18px;
-	margin-right: 8px;
+	margin-right: 12px;
 	background-color: #fff;
 	border-radius: 50%;
 	cursor: pointer;
@@ -242,7 +247,7 @@ a {
 
 .catalog_title {
 	margin: 0;
-	padding: 77px 0 110px 0;
+	padding: 67px 0 108px 0;
 	text-align: center;
 	font-size: 55px;
 	line-height: 55px;
@@ -265,12 +270,12 @@ a {
 
 .filter_range {
 	width: 260px;
-	margin-bottom: 60px;
+	margin-bottom: 55px;
 }
 
 .filter_range_title {
 	display: inline-block;
-	margin-bottom: 70px;
+	margin-bottom: 50px;
 	font-size: 18px;
 	line-height: 30px;
 	font-weight: bold;
@@ -324,6 +329,7 @@ a {
 	display: inline-block;
 	width: 50%;
 	font-size: 16px;
+	text-transform: uppercase;
 }
 
 .price_controls {
@@ -341,7 +347,7 @@ a {
 	margin-left: 10px;
 	padding: 8px 10px;
 	font-size: 16px;
-	line-height: 22px;
+	line-height: 21px;
 	text-align: center;
 	color: #283136;
 	border: none;
@@ -354,7 +360,7 @@ a {
 }
 
 .filters fieldset {
-	margin: 0 0 40px 0;
+	margin: 0 0 30px 0;
 	padding: 0;
 	border: none;
 }
@@ -397,7 +403,7 @@ a {
 .grid_list label::before {
 	content: "";
 	position: absolute;
-	left: -37px;
+	left: -35px;
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
@@ -409,8 +415,8 @@ a {
 	content: "";
 	display: none;
 	position: absolute;
-	left: -29px;
-	top: 6px;
+	left: -27px;
+	top: 5px;
 	width: 9px;
 	height: 9px;
 	border-radius: 50%;
@@ -425,7 +431,7 @@ a {
 	background-color: #fff;
 	border: 2px solid #a6a6a6;
 	border-radius: 2px;
-	left: -37px;
+	left: -35px;
 	top: 0;
 }
 
@@ -433,8 +439,8 @@ a {
 	content: "";
 	display: none;
 	position: absolute;
-	top: 2px;
-	left: -32px;
+	top: 3px;
+	left: -30px;
 	width: 20px;
 	height: 10px;
 	transform: rotate(-45deg);
@@ -479,7 +485,8 @@ a {
 }
 
 .filter_btn {
-	padding: 16px 85px;
+	margin-top: 5px;
+	padding: 16px 88px;
 	text-transform: uppercase;
 	border: none;
 	color: #000;
@@ -499,12 +506,12 @@ a {
 
 .sorting {
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 96px;
+	margin-bottom: 73px;
 }
 
 .sorting_title {
+	margin-right: 270px;
 	font-size: 18px;
 	line-height: 30px;
 	font-weight: bold;
@@ -512,20 +519,33 @@ a {
 }
 
 .sorting_list {
+	display: flex;
+
 	width: 360px;
 	margin: 0;
 	padding: 0;
 	list-style: none;
-
-	display: flex;
 }
 
 .sorting_list .sorting_item {
+	margin-right: 27px;
 	text-transform: uppercase;
 	font-size: 14px;
 	line-height: 18px;
 	font-weight: normal;
 	opacity: 0.3;
+}
+
+.sorting_list .sorting_item:nth-child(3) {
+	margin-right: 45px;
+}
+
+.sorting_list .arrow_down {
+	margin-right: 11px;
+}
+
+.sorting_list .arrow_up {
+	margin: 0;
 }
 
 .sorting_list .sorting_item:hover,
@@ -571,7 +591,7 @@ a {
 
 .catalog_item {
 	position: relative;
-	margin: 0 40px 75px 0;
+	margin: 0 40px 34px 0;
 }
 .catalog_item::before {
 	content: "";
@@ -637,9 +657,10 @@ a {
 
 .pagination_list {
 	display: flex;
-	margin: 0 0 40px 0;
+	margin: 5px 0 56px 0;
 	padding: 0;
 	list-style: none;
+	text-transform: uppercase;
 }
 
 .pagination_item {
@@ -655,7 +676,7 @@ a {
 }
 
 .pagination_item_btn {
-	padding: 13px 77px;
+	padding: 13px 81px;
 	font-size: 16px;
 	border-radius: 2px;
 	background-color: #eeeeee;
@@ -700,11 +721,11 @@ a {
 .offer_img {
 	width: 300px;
 	height: 145px;
-	margin-bottom: 27px;
+	margin-bottom: 26px;
 }
 
 .offer_item h3 {
-	margin: 0 0 20px 0;
+	margin: 0 0 17px 0;
 	font-size: 24px;
 	line-height: 30px;
 	text-transform: uppercase;
@@ -712,7 +733,7 @@ a {
 
 .offer_item p {
 	width: 240px;
-	margin: 0 0 10px 0;
+	margin: 0 0 8px 0;
 	color: #283136;
 }
 
@@ -764,15 +785,15 @@ a {
 }
 
 .offer_btn {
+	padding: 16px 40px;
 	margin-top: auto;
+	text-transform: uppercase;
 }
 
 .features {
 	display: flex;
 	justify-content: space-between;
-	padding-bottom: 40px;
-	margin-bottom: 45px;
-	border-bottom: 2px solid #eeeeee;
+	margin-bottom: 48px;
 }
 
 .about {
@@ -780,7 +801,7 @@ a {
 }
 
 .about h1 {
-	margin: 0 0 30px 0;
+	margin: 0 0 33px 0;
 	font-size: 45px;
 	line-height: 45px;
 	font-weight: 500;
@@ -793,7 +814,7 @@ a {
 
 .about span {
 	display: inline-block;
-	margin: 0 0 27px 0;
+	margin: 0 0 24px 0;
 	text-transform: uppercase;
 	font-weight: bold;
 }
@@ -804,7 +825,7 @@ a {
 
 .about_list li {
 	position: relative;
-	margin-bottom: 27px;
+	margin-bottom: 24px;
 	padding-left: 35px;
 }
 
@@ -826,16 +847,16 @@ a {
 }
 
 .stat {
-	flex-basis: 370px;
+	flex-basis: 362px;
 }
 
 .stat img {
-	margin: -35px 0 20px 20px;
+	margin: -35px 0 20px 2px;
 }
 
 .stat .stat_title {
 	display: block;
-	margin: 10px 0 40px 0;
+	margin: 10px 0 40px 17px;
 	text-transform: uppercase;
 	font-weight: bold;
 }
@@ -848,7 +869,7 @@ a {
 
 .table_stat td {
 	text-align: left;
-	padding: 0 20px 20px 0;
+	padding: 0 14px 18px 0;
 }
 
 .table_stat td:last-child {
@@ -861,16 +882,64 @@ a {
 	color: #283136;
 }
 
-.our_works {
+.our_works_list {
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
+	justify-content: space-around;
 	flex-wrap: wrap;
 
-	padding-bottom: 45px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	min-height: 184px;
 	margin-bottom: 80px;
 	border-bottom: 2px solid #eeeeee;
+	border-top: 2px solid #eeeeee;
 
+}
+
+.our_works li:first-child {
+	padding-top: 21px;
+}
+
+.our_works li:nth-child(2) {
+	padding-top: 13px;
+}
+
+.our_works li:nth-child(3) {
+	padding-top: 13px;
+}
+
+.our_works li:nth-child(4) {
+	padding-top: 13px;
+}
+
+
+.our_works li {
+	position: relative;
+}
+
+.our_works li:not(:first-child)::after {
+	content: "";
+	position: absolute;
+	width: 2px;
+	height: 52px;
+	background-color: #eee;
+}
+
+.our_works li:nth-child(2)::after {
+	top: 25px;
+	left: -68px;
+}
+
+.our_works li:nth-child(3)::after {
+  top: 7px;
+  left: -76px;
+}
+
+.our_works li:nth-child(4)::after {
+  top: 23px;
+  left: -59px;
 }
 
 .our_works img {
@@ -883,8 +952,8 @@ a {
 
 .address {
 	position: absolute;
-	top: calc(50% - 310px/2);
-	left: calc(50% - 600px);
+	top: calc(50% - 320px/2);
+	left: calc(50% - 581px);
 	width: 320px;
 	min-height: 310px;
 	padding: 50px;
@@ -892,15 +961,22 @@ a {
 	z-index: 1;
 }
 
+.address p {
+	margin: 0;
+	padding: 0;
+}
+
 .address .address_title {
+	margin: 0 10px 21px 0;
 	font-size: 18px;
 	line-height: 30px;
 	font-weight: bold;
 	text-transform: uppercase;
-	text-align: center;
 }
 
 .address .address_location {
+	width: 215px;
+	margin-bottom: 18px;
 	font-size: 16px;
 	line-height: 18px;
 	color: #666666;
@@ -910,6 +986,12 @@ a {
 	font-size: 16px;
 	line-height: 18px;
 	color: #666666;
+	margin-bottom: 36px;
+}
+
+.address_btn {
+	padding: 17px 44px;
+	text-transform: uppercase;
 }
 
 .main_footer  {
@@ -922,13 +1004,13 @@ a {
 
 .social_list {
 	display: flex;
-	margin: 0 140px 0 0;
+	margin: 0 130px 0 0;
 	padding: 0;
 	list-style: none;
 }
 
 .social_list li {
-	margin-right: 12px;
+	margin-right: 10px;
 }
 
 .social_list a {
@@ -983,20 +1065,15 @@ a {
 	margin: 0;
 }
 
-.promo_text {
-	align-self: center;
-}
-
 .promo_text p {
 	margin: 0;
 }
 
 .promo_text p:first-child {
-	margin-bottom: 5px;
+	margin: 5px 0 11px 0;
 	font-size: 36px;
 	line-height: 36px;
 	font-weight: bold;
-	text-transform: uppercase;
 }
 
 .promo_text p:last-child {
@@ -1127,7 +1204,7 @@ input[type="text"]:focus,
 	position: relative;
 	width: 100%;
 	height: 430px;
-	margin-bottom: 70px;
+	margin-bottom: 56px;
 }
 
 .modal_show {
